Increase nav z-index on home page to fix hero text bug on mobile

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
     justify-content: space-between;
     padding-left: 5%;
     padding-right: 5%;
+    z-index: 2;
 }
 .social-media{
     display: flex;
@@ -45,6 +46,7 @@
    color: black;
    text-align: center;
    min-width: 20em;
+   z-index: 1;
    
 }
 #home .slow-mo-container-mobile{
@@ -63,6 +65,7 @@
     padding-top: 8em;
 
 }
+
 #home .banner{
     background-color: rgba(47, 245, 252, 0.37);
     padding: 2em;
@@ -246,6 +249,9 @@
     
 }
 
+#sponsor .banner{
+    padding-bottom: 2em;
+}
 @media screen and (min-width: 1000px) {
     #sponsor .banner{
         padding-bottom: 5em;
